cambio de localhost a url ya de render

--- a/views/paciente/pacienteTurno.pug
+++ b/views/paciente/pacienteTurno.pug
@@ -5,7 +5,7 @@ html
         link(rel="stylesheet" href="/css/pacienteTurno.css")
     body
         header
-            a(href="http://localhost:3000/pacientes/paciente", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
+            a(href="https://agendadeconsultorio.onrender.com/pacientes/paciente", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
             nav 
                 ul(class="ulHeader")
                     li: a(href="/pacientes/paciente") Inicio
