--- a/views/admin/adminReadProfesional.pug
+++ b/views/admin/adminReadProfesional.pug
@@ -18,7 +18,7 @@ html
             section(class="sectionFooter")
                 ul Nuestros GitHub
                     li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
-                    li: a(href="https://github.com/JuanCarrillo2435") Lucero Miguel
+                    li: a(href="https://github.com/MiguelLuceroSL") Lucero Miguel
                 img(src="/img/agenda.png", alt="" class="logoFooter")
                 ul Nuestros LinkedIn
                     li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
