login, register, registerSecretaria
separe el login del register, ahora solo se pueden registrar pacientes, para registrar secretaria se hace desde el panel del admin, y ahora cuando te registrar no te manda a una pagina con un json y una frase, sino a la misma pagina de register pero con un mensaje de exito

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -26,6 +26,16 @@ header{
     gap: 60px;
 }
 
+.seccionSecre{
+    width: 60vw;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
 .articuloLogin, .articuloRegistro{
     height: 100%;
     width: 400px;
