--- a/views/admin/adminSecretariaSuccess.pug
+++ b/views/admin/adminSecretariaSuccess.pug
@@ -4,6 +4,7 @@ html
         title Cargar Medico
         link(rel="stylesheet", href="/css/adminCargarProfesional.css")
         link(rel="stylesheet", href="/css/adminCreateProfesional.css")
+        link(rel="stylesheet", href="/css/login.css")
     body
         header
             a(href="http://localhost:3000/admin/home", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
@@ -14,24 +15,18 @@ html
                     li: a(href="/admin/registerSecretaria") Registrar secretaria
                     li: a(href="/admin/cargarAgenda") Agendas
                     li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
-        main
-            form.formCreate(action="/profesional/crear", method="POST")
-                span.spanCreate Cargar un medico
-                fieldset.nombreCompleto 
-                    label.lbNombreCompleto(for="nombre_completo") Nombre completo: 
-                    input.inputNombreCompleto(type="text", id="nombre_completo", name="nombre_completo", required, placeholder="Nombre completo")
-                fieldset.matricula
-                    label.lbMatricula(for="matricula") Matricula: 
-                    input.inputMatricula(type="text", id="matricula", name="matricula", required, placeholder="Matricula")
-                fieldset.especialidad 
-                    label.lbEspecialidad(for="especialidad") Especialidad: 
-                    select.selectEspecialidad(name="especialidad")
-                        option(value="cardiologia") Cardiologia
-                        option(value="pediatria") Pediatria
-                        option(value="kinesiologia") Kinesiologia
-                        option(value="psicologia") Psicologia
-                        option(value="odontologia") Odontologia
-                button.botonCreate(type="submit") Cargar medico
+        section.seccionSecre
+            h1 ¡Secretaria creada con éxito!
+            article.articuloRegistro
+                form.formRegistro(action="/auth/registerSecretaria", method="POST")
+                    span.spanRegistro REGISTRAR SECRETARIA
+                    fieldset.emailRegistro
+                        label.lbEmailRegistro(for="registerEmail") Correo electrónico:
+                        input.inputEmailRegistro(type="email", id="registerEmail", name="email", required, placeholder="Correo electrónico")
+                    fieldset.pwRegistro
+                        label.lbPwRegistro(for="registerPassword") Contraseña:
+                        input.inputPwRegistro(type="password", id="registerPassword", name="password", required, placeholder="Contraseña")
+                    button.botonRegistro(type="submit") Registrar secretaria
         footer(class="footer")
             section(class="sectionFooter")
                 ul Nuestros GitHub
