--- a/views/registerSuccess.pug
+++ b/views/registerSuccess.pug
@@ -11,7 +11,7 @@ html
               li: a(href="/auth/login") Iniciar Sesion
               li: a(href="/auth/register") Registrarse
     main
-        h1 Agenda de Consultorios 
+        h1 ¡Usuario registrado exitosamente!
         section(class="sectionCarrousel")
           button(type="button" class="btnIzq" id="btnIzq"): img(src="/img/btn2.png", alt="btn2" class="btn2")
           article(class="carrousel")
