--- a/views/admin/adminReadProfesional.pug
+++ b/views/admin/adminReadProfesional.pug
@@ -10,6 +10,7 @@ html
                 ul(class="ulHeader")
                     li: a(href="/admin/home") Inicio
                     li: a(href="/admin/cargarProfesional") Médicos
+                    li: a(href="/admin/registerSecretaria") Registrar secretaria
                     li: a(href="/admin/cargarAgenda") Agendas
                     li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
         main 
