--- a/views/admin/adminCargarProfesional.pug
+++ b/views/admin/adminCargarProfesional.pug
@@ -26,8 +26,8 @@ html
                     a(href="http://localhost:3000/admin/updateProfesional", rel="noopener noreferrer"): img(src="/img/update.png", alt="logoUpdate" class="logoUpdate")
                     span Editar datos de un medico
                 article(class="articleCrud")
-                    a(href="http://localhost:3000/admin/deleteProfesional", rel="noopener noreferrer"): img(src="/img/delete.png", alt="logoDelete" class="logoDelete")
-                    span Borrar un medico
+                    a(href="http://localhost:3000/admin/deleteProfesional", rel="noopener noreferrer"): img(src="/img/inactivar.png", alt="logoDelete" class="logoDelete")
+                    span Activar / Inactivar un medico
         footer(class="footer")
             section(class="sectionFooter")
                 ul Nuestros GitHub
