--- a/views/secretaria/secretariaGestionTurno.pug
+++ b/views/secretaria/secretariaGestionTurno.pug
@@ -5,7 +5,7 @@ html
     link(rel="stylesheet" href="/css/secretariaGestionTurno.css")
   body
     header
-      a(href="http://localhost:3000/secretaria/home", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
+      a(href="http://localhost:3000/secretaria/home" rel="noopener noreferrer"): img(src="/img/agenda.png" alt="" class="logoHeader")
       nav 
         ul(class="ulHeader")
           li: a(href="/secretaria/home") Inicio
@@ -13,6 +13,18 @@ html
           li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
     h1 Bienvenida, secretaria!
     p Aquí puedes gestionar turnos.
+    
+    h1 Selecciona un Profesional
+
+    form(action="/turno/crear" method="POST") 
+      select(name="profesional" required)
+        option(value="" selected disabled)
+        if profesionales && profesionales.lenght
+          each profesional in profesionales
+            option(value=profesional.id) profesional.nombre_completo / profesional.especialidad
+        else
+          p no se encontraron profesionales
+          
     footer(class="footer")
       section(class="sectionFooter")
         ul(class="ulFooter") Nuestros GitHub
@@ -22,4 +34,5 @@ html
         ul(class="ulFooter") Nuestros LinkedIn
           li: a(href="https://github.com/JuanCarrillo2435") Carrillo Juan
           li: a(href="https://www.linkedin.com/in/lucero-roque-roberto-miguel-2122bb251/") Lucero Miguel
+
     script(src="/js/logout.js")
