changes admin panel crud
cambios sobre el update medico

--- a/views/admin/adminReadProfesional.pug
+++ b/views/admin/adminReadProfesional.pug
@@ -30,6 +30,7 @@ html
                 table
                     thead
                         tr
+                            th Id
                             th Nombre Completo
                             th Especialidad
                             th Matrícula
@@ -37,10 +38,11 @@ html
                     tbody
                         each profesional in profesionales
                             tr
+                                td= profesional.id
                                 td= profesional.nombre_completo
                                 td= profesional.especialidad
                                 td= profesional.matricula
-                                td= profesional.estado === "1" ? 'Activo' : 'Inactivo'
+                                td= profesional.estado === 1 ? 'Activo' : 'Inactivo'
             else
                 p No se encontraron profesionales para la especialidad seleccionada.
         footer(class="footer")
