--- a/views/secretaria/secretariaGestionTurno.pug
+++ b/views/secretaria/secretariaGestionTurno.pug
@@ -15,15 +15,14 @@ html
     p Aquí puedes gestionar turnos.
     
     h1 Selecciona un Profesional
-
-    form(action="/turno/crear" method="POST") 
-      select(name="profesional" required)
-        option(value="" selected disabled)
-        if profesionales && profesionales.lenght
-          each profesional in profesionales
-            option(value=profesional.id) profesional.nombre_completo / profesional.especialidad
-        else
-          p no se encontraron profesionales
+    if profesionales && profesionales.length
+      form(action="/turno/crear" method="POST") 
+        select(name="profesional" required)
+          option(value="" selected disabled)
+            each profesional in profesionales
+              option(value=profesional.id)= profesional.nombre_completo
+    else
+      p no se encontraron profesionales
           
     footer(class="footer")
       section(class="sectionFooter")
