--- a/public/css/adminCargarProfesional.css
+++ b/public/css/adminCargarProfesional.css
@@ -53,6 +53,10 @@ nav{
     align-items: center;
 }
 
+.aLink{
+    font-weight: bold;
+}
+
 .footer{
     border-top: 1px solid rgb(129, 129, 129);
     width: 60vw; 
