--- a/views/admin/adminDeleteProfesional.pug
+++ b/views/admin/adminDeleteProfesional.pug
@@ -14,7 +14,7 @@ html
                     li: a(href="/admin/cargarAgenda") Agendas
                     li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
         main 
-            h1 Eliminar un Medico
+            h1 Activar / Inactivar un Medico
         footer(class="footer")
             section(class="sectionFooter")
                 ul Nuestros GitHub
