--- a/views/admin/adminUpdateProfesional.pug
+++ b/views/admin/adminUpdateProfesional.pug
@@ -13,31 +13,24 @@ html
                     li: a(href="/admin/registerSecretaria") Registrar secretaria
                     li: a(href="/admin/cargarAgenda") Agendas
                     li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
-        main 
-            h1 Actualizar Médico
-
-            input(type="text" id="searchInput" placeholder="Buscar por nombre...")
-
-            table#profesionalesTable
-                thead
-                    tr
-                        th Nombre Completo
-                        th Especialidad
-                        th Matrícula
-                        th Acciones
-                tbody
-                    each profesional in profesionales
-                        tr
-                            td= profesional.nombre_completo
-                            td= profesional.especialidad
-                            td= profesional.matricula
-                            td
-                                form(action="/admin/actualizarEspecialidad" method="POST")
-                                    input(type="hidden" name="profesional_id" value=profesional.profesional_id)
-                                    input(type="text" name="nueva_especialidad" placeholder="Nueva especialidad" required)
-                                    input(type="text" name="matricula" placeholder="Nueva matrícula" value=profesional.matricula required)
-                                    button(type="submit") Actualizar
-
+        main
+            p Buscar la ID en este 
+                a(href="http://localhost:3000/admin/readProfesional", rel="noopener noreferrer", class="aLink") link
+            h2 Actualizar especialidad de un médico
+            form(action="/admin/actualizarEspecialidad" method="POST")
+                input(type="text" name="id" placeholder="id del medico" required)
+                input(type="text" name="nueva_especialidad" placeholder="Nueva especialidad" required)
+                button(type="submit") Actualizar
+            h2 Actualizar matricula de un médico
+            form(action="/admin/actualizarEspecialidad" method="POST")
+                input(type="text" name="id" placeholder="id del medico" required)
+                input(type="text" name="nueva_matricula" placeholder="Nueva matrícula" required)
+                button(type="submit") Actualizar
+            h2 Actualizar nombre completo de un médico
+            form(action="/admin/actualizarEspecialidad" method="POST")
+                input(type="text" name="id" placeholder="id del medico" required)
+                input(type="text" name="nombre_completo" placeholder="Nueva nombre completo" required)
+                button(type="submit") Actualizar
         footer(class="footer")
             section(class="sectionFooter")
                 ul Nuestros GitHub
