--- a/views/admin/adminUpdateProfesional.pug
+++ b/views/admin/adminUpdateProfesional.pug
@@ -22,12 +22,12 @@ html
                 input(type="text" name="nueva_especialidad" placeholder="Nueva especialidad" required)
                 button(type="submit") Actualizar
             h2 Actualizar matricula de un médico
-            form(action="/admin/actualizarEspecialidad" method="POST")
-                input(type="text" name="id" placeholder="id del medico" required)
+            form(action="/admin/actualizarMatricula" method="POST")
+                input(type="text" name="matricula" placeholder="Matrícula actual" required)
                 input(type="text" name="nueva_matricula" placeholder="Nueva matrícula" required)
                 button(type="submit") Actualizar
             h2 Actualizar nombre completo de un médico
-            form(action="/admin/actualizarEspecialidad" method="POST")
+            form(action="/admin/actualizarNombreCompleto" method="POST")
                 input(type="text" name="id" placeholder="id del medico" required)
                 input(type="text" name="nombre_completo" placeholder="Nueva nombre completo" required)
                 button(type="submit") Actualizar
