--- a/views/secretaria/secretariaGestionTurno.pug
+++ b/views/secretaria/secretariaGestionTurno.pug
@@ -14,16 +14,26 @@ html
     h1 Bienvenida, secretaria!
     p Aquí puedes gestionar turnos.
     
-    h1 Selecciona un Profesional
-    if profesionales && profesionales.length
-      form(action="/turno/crear" method="POST") 
+   
+    
+    form(action="/turno/crear" method="POST") 
+      h3 Selecciona un Profesional
+      if profesionales && profesionales.length
         select(name="profesional" required)
           option(value="" selected disabled)
             each profesional in profesionales
-              option(value=profesional.id)= profesional.nombre_completo
-    else
-      p no se encontraron profesionales
-          
+              option(value=profesional.id)= `${profesional.nombre_completo} / ${profesional.especialidad}`
+      else
+        p no se encontraron profesionales
+      h3 selecciona un paciente
+      if pacientes && pacientes.length
+        select(name="paciente" required)
+          option(value="" selected disabled) Selecciona un paciente
+            each paciente in pacientes
+              option(value=paciente.id)= `${paciente.dni} - ${paciente.nombre_completo}`
+      else
+        p no se encontraron pacientes
+
     footer(class="footer")
       section(class="sectionFooter")
         ul(class="ulFooter") Nuestros GitHub
