--- a/views/admin/adminReadProfesional.pug
+++ b/views/admin/adminReadProfesional.pug
@@ -3,6 +3,7 @@ html
     head
         title Lista de Médicos
         link(rel="stylesheet" href="/css/adminCargarProfesional.css")
+        link(rel="stylesheet" href="/css/adminRead.css")
     body
         header
             a(href="/admin/home" rel="noopener noreferrer"): img(src="/img/agenda.png" alt="" class="logoHeader")
