--- a/views/admin/adminRegisterSecretaria.pug
+++ b/views/admin/adminRegisterSecretaria.pug
@@ -1,7 +1,7 @@
 doctype html
 html
     head
-        title Cargar Medico
+        title Cargar Médico
         link(rel="stylesheet", href="/css/adminCargarProfesional.css")
         link(rel="stylesheet", href="/css/adminCreateProfesional.css")
         link(rel="stylesheet", href="/css/login.css")
@@ -11,7 +11,7 @@ html
             nav 
                 ul(class="ulHeader")
                     li: a(href="/admin/home") Inicio
-                    li: a(href="/admin/cargarProfesional") Medicos
+                    li: a(href="/admin/cargarProfesional") Médicos
                     li: a(href="/admin/registerSecretaria") Registrar secretaria
                     li: a(href="/admin/cargarAgenda") Agendas
                     li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
