--- a/views/registerSuccess.pug
+++ b/views/registerSuccess.pug
@@ -8,7 +8,7 @@ html
       a(href="http://localhost:3000/", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
       nav
           ul
-              li: a(href="/auth/login") Iniciar Sesion
+              li: a(href="/auth/login") Iniciar Sesión
               li: a(href="/auth/register") Registrarse
     main
         h1 ¡Usuario registrado exitosamente!
