--- a/views/admin/adminCreateSuccess.pug
+++ b/views/admin/adminCreateSuccess.pug
@@ -1,7 +1,7 @@
 doctype html
 html
     head
-        title Cargar Medico
+        title Cargar Médico
         link(rel="stylesheet", href="/css/adminCargarProfesional.css")
         link(rel="stylesheet", href="/css/adminCreateProfesional.css")
     body
@@ -10,12 +10,12 @@ html
             nav 
                 ul(class="ulHeader")
                     li: a(href="/admin/home") Inicio
-                    li: a(href="/admin/cargarProfesional") Medicos
+                    li: a(href="/admin/cargarProfesional") Médicos
                     li: a(href="/admin/registerSecretaria") Registrar secretaria
                     li: a(href="/admin/cargarAgenda") Agendas
                     li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
         main
-            h1 ¡Medico cargado exitosamente!
+            h1 ¡Médico cargado exitosamente!
         footer(class="footer")
             section(class="sectionFooter")
                 ul Nuestros GitHub
