--- a/views/admin/adminDeleteSuccess.pug
+++ b/views/admin/adminDeleteSuccess.pug
@@ -3,8 +3,6 @@ html
     head
         title Cargar Médico
         link(rel="stylesheet", href="/css/adminCargarProfesional.css")
-        link(rel="stylesheet", href="/css/adminCreateProfesional.css")
-        link(rel="stylesheet", href="/css/login.css")
     body
         header
             a(href="http://localhost:3000/admin/home", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
@@ -15,18 +13,14 @@ html
                     li: a(href="/admin/registerSecretaria") Registrar secretaria
                     li: a(href="/admin/cargarAgenda") Agendas
                     li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
-        section.seccionSecre
-            h1 ¡Secretaria creada con éxito!
-            article.articuloRegistro
-                form.formRegistro(action="/auth/registerSecretaria", method="POST")
-                    span.spanRegistro REGISTRAR SECRETARIA
-                    fieldset.emailRegistro
-                        label.lbEmailRegistro(for="registerEmail") Correo electrónico:
-                        input.inputEmailRegistro(type="email", id="registerEmail", name="email", required, placeholder="Correo electrónico")
-                    fieldset.pwRegistro
-                        label.lbPwRegistro(for="registerPassword") Contraseña:
-                        input.inputPwRegistro(type="password", id="registerPassword", name="password", required, placeholder="Contraseña")
-                    button.botonRegistro(type="submit") Registrar secretaria
+        main 
+            h1 ¡¡¡Se cambió el estado exitosamente!!!
+            p Buscar la ID o Matrícula en este 
+                a(href="http://localhost:3000/admin/readProfesional", rel="noopener noreferrer", class="aLink") link
+            h1 Activar / Inactivar un Médico
+            form(action="/admin/cambiarEstado" method="POST")
+                input(type="text" name="id" placeholder="ID del médico" required)
+                button(type="submit") Cambiar de estado
         footer(class="footer")
             section(class="sectionFooter")
                 ul Nuestros GitHub
