--- a/views/admin/adminUpdateEspecialidadSuccess.pug
+++ b/views/admin/adminUpdateEspecialidadSuccess.pug
@@ -14,6 +14,7 @@ html
                     li: a(href="/admin/cargarAgenda") Agendas
                     li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
         main
+            h1 ¡¡¡Se actualizo la especialidad exitosamente!!!
             p Buscar la ID o Matrícula en este 
                 a(href="http://localhost:3000/admin/readProfesional", rel="noopener noreferrer", class="aLink") link
             h2 Actualizar especialidad de un médico
