--- a/views/secretaria/secretariaGestionTurno.pug
+++ b/views/secretaria/secretariaGestionTurno.pug
@@ -16,10 +16,10 @@ html
     
    
     
-    form(action="/turno/crear" method="POST") 
+    form(action="/turnos/crear" method="POST") 
       h3 Selecciona un Profesional
       if profesionales && profesionales.length
-        select(name="profesional" required)
+        select(name="profesional_especialidad_id" required)
           option(value="" selected disabled)
             each profesional in profesionales
               option(value=profesional.id)= `${profesional.nombre_completo} / ${profesional.especialidad}`
@@ -27,12 +27,31 @@ html
         p no se encontraron profesionales
       h3 selecciona un paciente
       if pacientes && pacientes.length
-        select(name="paciente" required)
+        select(name="paciente_id" required)
           option(value="" selected disabled) Selecciona un paciente
             each paciente in pacientes
               option(value=paciente.id)= `${paciente.dni} - ${paciente.nombre_completo}`
       else
         p no se encontraron pacientes
+
+      
+      label(for="fecha") Selecciona la fecha:
+      input(type="date" name="fecha" id="fecha" required)
+
+      
+      label(for="horario") Selecciona un horario:
+      select(name="hora" id="horario" required)
+        option(value="" selected disabled) Selecciona un horario
+
+      
+      label(for="detalle_turno") Detalle del turno:
+      textarea(name="detalle_turno" id="detalle_turno" rows="4" placeholder="Detalles adicionales del turno" required)
+
+      
+      input(type="hidden" name="estado" value="Confirmado")
+
+      button(type="submit") Crear Turno
+      
 
     footer(class="footer")
       section(class="sectionFooter")
@@ -45,3 +64,4 @@ html
           li: a(href="https://www.linkedin.com/in/lucero-roque-roberto-miguel-2122bb251/") Lucero Miguel
 
     script(src="/js/logout.js")
+    script(src="/js/horarios.js")
