gestion de turnos

--- a/views/secretaria/secretariaPanel.pug
+++ b/views/secretaria/secretariaPanel.pug
@@ -8,11 +8,29 @@ html
       a(href="http://localhost:3000/secretaria/home", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
       nav 
         ul(class="ulHeader")
-          li: a(href="/secretaria/home") Inicio
-          li: a(href="/turnos/listarProfesionales") Gestionar Turnos
+          li: a(href="/turnos/listarTurnos") Ver Turnos
+          li: a(href="/turnos/listarProfesionales") Sacar Turnos
           li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
     h1 Bienvenida, secretaria!
     p Aquí puedes gestionar.
+
+    h2 Lista de Turnos
+    if turnos && turnos.length
+      ul
+        each turno in turnos
+          li
+            strong Turno para: #{turno.paciente_nombre} - #{turno.detalle_turno}
+            br
+            Fecha: #{turno.fecha ? turno.fecha : 'No disponible'}
+            br
+            Hora: #{turno.hora}
+            br
+            Profesional: #{turno.profesional_especialidad} 
+            br
+            Estado: #{turno.estado}
+    else
+      p No hay turnos disponibles
+
     footer(class="footer")
       section(class="sectionFooter")
         ul(class="ulFooter") Nuestros GitHub
