--- a/views/secretaria/secretariaGestionTurno.pug
+++ b/views/secretaria/secretariaGestionTurno.pug
@@ -8,12 +8,12 @@ html
       a(href="http://localhost:3000/secretaria/home" rel="noopener noreferrer"): img(src="/img/agenda.png" alt="" class="logoHeader")
       nav 
         ul(class="ulHeader")
-          li: a(href="/secretaria/home") Inicio
+          li: a(href="/turnos/listarTurnos") Ver Turnos
           li: a(href="/secretaria/gestionTurno") Gestionar Turnos
           li: a(href="javascript:void(0);" id="logoutButton") Cerrar Sesión
     h1 Bienvenida, secretaria!
     p Aquí puedes gestionar turnos.
-    
+      
    
     
     form(action="/turnos/crear" method="POST") 
@@ -22,7 +22,7 @@ html
         select(name="profesional_especialidad_id" required)
           option(value="" selected disabled)
             each profesional in profesionales
-              option(value=profesional.id)= `${profesional.nombre_completo} / ${profesional.especialidad}`
+              option(value=profesional.id)= `${profesional.id}  ${profesional.nombre_completo} / ${profesional.especialidad}`
       else
         p no se encontraron profesionales
       h3 selecciona un paciente
